<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fieldQuestiono"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/enter_question"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fieldCorr"
            android:layout_below="@+id/fieldQuestiono"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/enter_corrans"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fieldInCorr2"
            android:layout_below="@+id/fieldInCorr1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/enter_incorransw"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fieldInCorr1"
            android:layout_below="@+id/fieldCorr"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/enter_incorransw"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fieldIncorr3"
            android:layout_below="@+id/fieldInCorr2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/enter_incorransw"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_question"
            android:id="@+id/btnAccept"
            android:layout_below="@+id/fieldIncorr3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="66dp" />
    </RelativeLayout>
</LinearLayout>